--- a/app/src/main/res/layout/activity_gelismis_uygulama_ayarlari.xml
+++ b/app/src/main/res/layout/activity_gelismis_uygulama_ayarlari.xml
@@ -44,7 +44,7 @@
         app:srcCompat="@drawable/line" />
 
     <Switch
-        android:id="@+id/switch3"
+        android:id="@+id/bluetooth"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -53,6 +53,7 @@
         android:text="CİHAZI ETKİNLEŞTİR"
         android:textColor="@color/white"
         android:textSize="16sp"
+        android:checked="false"
         android:thumb="@drawable/ellipse1"
         android:track="@drawable/kompresorswitch"
         app:layout_constraintEnd_toStartOf="@+id/imageView28"
@@ -73,7 +74,7 @@
         android:track="@drawable/kompresorswitch"
         app:layout_constraintEnd_toStartOf="@+id/imageView28"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/switch3" />
+        app:layout_constraintTop_toBottomOf="@+id/bluetooth" />
 
     <Switch
         android:id="@+id/switch4"
