--- a/app/src/main/res/layout/fragment_enerji.xml
+++ b/app/src/main/res/layout/fragment_enerji.xml
@@ -59,7 +59,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
-        android:src="@drawable/akurectangle"
+        android:src="@drawable/akurectanglekirmizi0"
         app:layout_constraintBottom_toBottomOf="@+id/imageView17"
         app:layout_constraintEnd_toEndOf="@+id/imageView17"
         app:layout_constraintStart_toStartOf="@+id/imageView17" />
