--- a/app/src/main/res/layout/fragment_gostergeler.xml
+++ b/app/src/main/res/layout/fragment_gostergeler.xml
@@ -60,7 +60,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:src="@drawable/rectanglemavi"
+        android:src="@drawable/gostergerectanglemavi75"
         app:layout_constraintBottom_toBottomOf="@+id/imageView48"
         app:layout_constraintEnd_toEndOf="@+id/imageView48"
         app:layout_constraintStart_toStartOf="@+id/imageView48" />
