--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
+    android:keepScreenOn="true"
     tools:context=".MainActivity">
 
 
@@ -22,15 +23,16 @@
         app:srcCompat="@drawable/re" />
 
     <ImageView
-        android:id="@+id/msk"
+        android:id="@+id/maske"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
+        android:src="@drawable/tasarim"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars" />
+        app:srcCompat="@drawable/vector" />
 
     <ImageView
         android:id="@+id/hunter"
@@ -41,7 +43,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.488"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/msk"
+        app:layout_constraintTop_toBottomOf="@+id/maske"
         app:srcCompat="@drawable/hunter" />
 
     <ImageView
@@ -50,10 +52,10 @@
         android:layout_height="300dp"
         android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/hunter"
-        app:layout_constraintEnd_toEndOf="@+id/msk"
+        app:layout_constraintEnd_toEndOf="@+id/maske"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/msk"
-        app:layout_constraintTop_toTopOf="@+id/msk"
+        app:layout_constraintStart_toStartOf="@+id/maske"
+        app:layout_constraintTop_toTopOf="@+id/maske"
         app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/mask" />
 </androidx.constraintlayout.widget.ConstraintLayout>
