--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,4 +58,13 @@
         app:layout_constraintTop_toTopOf="@+id/maske"
         app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/mask" />
+
+    <ImageView
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="@+id/maske"
+        app:layout_constraintStart_toStartOf="@+id/maske"
+        app:layout_constraintTop_toTopOf="@+id/maske"
+        app:srcCompat="@drawable/empty_vector" />
 </androidx.constraintlayout.widget.ConstraintLayout>
