--- a/app/src/main/res/layout/activity_diagnostik_menu.xml
+++ b/app/src/main/res/layout/activity_diagnostik_menu.xml
@@ -22,8 +22,9 @@
 
     <TextView
         android:id="@+id/textView29"
-        android:layout_width="332dp"
-        android:layout_height="106dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:fontFamily="@font/poppinsbold"
         android:gravity="center"
         android:text="DİAGNOSTİK MENÜ"
@@ -623,7 +624,7 @@
         android:id="@+id/imageView30"
         android:layout_width="481dp"
         android:layout_height="81dp"
-        android:layout_marginTop="16dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView31"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView34"
@@ -633,7 +634,7 @@
         android:id="@+id/backbutton1"
         android:layout_width="56dp"
         android:layout_height="35dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintEnd_toStartOf="@+id/textView29"
         app:layout_constraintHorizontal_bias="0.253"
         app:layout_constraintStart_toStartOf="parent"
