--- a/app/src/main/res/layout/activity_gelismis_uygulama_ayarlari.xml
+++ b/app/src/main/res/layout/activity_gelismis_uygulama_ayarlari.xml
@@ -24,7 +24,7 @@
         android:id="@+id/textView17"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="62dp"
+        android:layout_marginTop="8dp"
         android:fontFamily="@font/poppinsbold"
         android:text="GELİŞMİŞ UYGULAMA AYARLARI"
         android:textColor="@color/white"
@@ -220,7 +220,7 @@
         android:id="@+id/imageView33"
         android:layout_width="481dp"
         android:layout_height="82dp"
-        android:layout_marginTop="24dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button"
