--- a/app/src/main/res/layout/fragment_ayarlar.xml
+++ b/app/src/main/res/layout/fragment_ayarlar.xml
@@ -62,17 +62,16 @@
         android:text="GİRİŞ YAP"
         android:textColor="@color/white"
         android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.526"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/editTextText2"
+        app:layout_constraintStart_toStartOf="@+id/editTextText2"
         app:layout_constraintTop_toBottomOf="@+id/editTextText2" />
 
     <ImageView
         android:id="@+id/imageView7"
         android:layout_width="481dp"
         android:layout_height="82dp"
-        android:layout_marginTop="10dp"
         android:src="@drawable/huntercunter"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.542"
         app:layout_constraintStart_toStartOf="parent"
