--- a/app/src/main/res/layout/fragment_kontroller.xml
+++ b/app/src/main/res/layout/fragment_kontroller.xml
@@ -71,8 +71,8 @@
         android:id="@+id/imageView11"
         android:layout_width="481dp"
         android:layout_height="82dp"
-        android:layout_marginTop="16dp"
         android:src="@drawable/huntercunter"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
