--- a/app/src/main/res/layout/fragment_aydinlatma.xml
+++ b/app/src/main/res/layout/fragment_aydinlatma.xml
@@ -176,27 +176,25 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="140dp"
         android:fontFamily="@font/poppinsbold"
         android:text="İÇ AYDINLATMALAR"
         android:textColor="@color/white"
         android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/disaydinlatma"
+        app:layout_constraintEnd_toEndOf="@+id/linearLayout4"
+        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/disaydinlatma"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_marginStart="140dp"
         android:layout_marginTop="16dp"
         android:fontFamily="@font/poppinsbold"
         android:text="DIŞ AYDINLATMALAR"
         android:textColor="@color/white"
         android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/oturmaalaniisik"
+        app:layout_constraintStart_toStartOf="@+id/oturmaalani"
         app:layout_constraintTop_toTopOf="parent" />
 
 
@@ -433,8 +431,8 @@
         android:id="@+id/imageView26"
         android:layout_width="481dp"
         android:layout_height="82dp"
-        android:layout_marginTop="16dp"
         android:src="@drawable/huntercunter"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
